--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,25 @@ a {
 		margin-left: 12px;
 	}
 
+	/* ---- Columns ----- */
+
+	.col {
+		float: left;
+		padding-left: 1em;
+		padding-right: 1em;
+	}
+
+	.primary {
+		width: 60%;
+	}
+
+	.secondary {
+		width: 40%;
+	}
+
+
+	/* ---- Columns ----- */
+
 	.name {
 		float: left;
 	}
